fixed css Forms issue on mobile devices

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -39,3 +39,9 @@ body {
 		height: 2px;
 	}
 }
+.run {
+	animation-play-state: running;
+}
+.stop {
+	animation-play-state: paused;
+}
