--- a/frontend/src/pages/auth/Signup/signUp.scss
+++ b/frontend/src/pages/auth/Signup/signUp.scss
@@ -1,16 +1,13 @@
 #signUP {
 	display: grid;
-	width: clamp(10rem, 50vw, 100%);
-	font-size: var(--fs2);
+	width: clamp(10rem, 70vw, 100%);
 	grid-template-columns: 1fr 1fr;
 	place-content: center;
-	padding: var(--sp6);
 	margin-inline: auto;
 	align-items: center;
-	gap: var(--sp8);
+	row-gap: 1rem;
 	input {
 		border: transparent;
-		padding: 0.5ch;
 		border-radius: 0.25ch;
 		outline: none;
 		border: none;
@@ -30,7 +27,7 @@
 	}
 }
 #formLogo {
-	margin: 3rem auto;
+	margin: 1rem auto;
 	display: block;
 	width: max(10vw, 8rem);
 	aspect-ratio: 1;
@@ -49,7 +46,7 @@
 #signUP input:focus,
 #signUP input:focus-visible {
 	&::placeholder {
-		transform: translateX(100%);
+		transform: translateY(-150%);
 	}
-	box-shadow: 0px 0px 5px 0px inset var(--mainc), 0px 0px 5px 0px var(--mainc);
+	box-shadow: 0px 0px 7px 0px var(--mainc);
 }
