--- a/frontend/src/pages/auth/login/login.scss
+++ b/frontend/src/pages/auth/login/login.scss
@@ -1,13 +1,13 @@
 #login {
 	display: grid;
-	width: clamp(10rem, 50vw, 100%);
+	width: clamp(10rem, 70vw, 100%);
 	font-size: var(--fs2);
 	grid-template-columns: 1fr 1fr;
 	place-content: center;
 	padding: var(--sp6);
 	margin-inline: auto;
 	align-items: center;
-	gap: var(--sp8);
+	row-gap: 1rem;
 	input {
 		border: transparent;
 		padding: 0.5ch;
@@ -15,6 +15,7 @@
 		outline: none;
 		border: none;
 		transition: var(--tr);
+		border-radius: 0.2ch;
 	}
 	input[type="submit"] {
 		align-self: center;
@@ -30,7 +31,7 @@
 	}
 }
 #formLogo {
-	margin: 3rem auto;
+	margin: 1rem auto;
 	display: block;
 	width: max(10vw, 8rem);
 	aspect-ratio: 1;
@@ -46,10 +47,11 @@
 ::placeholder {
 	transition: 500ms ease;
 }
+
 form#login input:focus,
 form#login input:focus-visible {
 	&::placeholder {
-		transform: translateX(100%);
+		transform: translateY(-150%);
 	}
-	box-shadow: 0px 0px 5px 0px inset var(--mainc), 0px 0px 5px 0px var(--mainc);
+	box-shadow: 0px 0px 7px 0px var(--mainc);
 }
